--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
 
 	<!-- SECCION 01 =================================================================================== -->
 
-	<div class="container-fluid bordes animated animated-fast fadeIn" id="seccion_01">
+	<div class="container-fluid animated animated-fast fadeIn" id="seccion_01">
 
 		<div class="row" id="seccion_01_items">
 
@@ -222,7 +222,7 @@
 
 					<form class="form-horizontal" method="post" action="/contactos/webcreate" id="contacto_form">
 
-						<h4 class="text-center">CONTACTO</h4>
+						<h4>CONTACTO</h4>
 						<br>
 
 						<div class="form-group">
@@ -273,22 +273,16 @@
 
 						<thead>
 
-								<th><h4>CONTACTO</h4></th>
+								<th><h4>OTROS PROYECTOS</h4></th>
 
 						</thead>
 
 						<tbody>
 							<tr>
-								<td><h5><i class="fa fa-industry"></i> &copy; 2017 cosilsCompany, Inc.</h5></td>
+								<td><h5>PoolCounter &copy;</h5></td>
 							</tr>
 							<tr>
-								<td><h5><i class="fa fa-home"></i> Partida Moralet, 137-A - 03699 - Alicante</h5></td>
-							</tr>
-							<tr>
-								<td><h5><i class="fa fa-phone"></i> 0034658214679</h5></td>
-							</tr>
-							<tr>
-								<td><h5><i class="fa fa-envelope"></i> jotamontoyo@hotmail.es</h5></td>
+								<td><h5>WaterCounter &copy;</h5></td>
 							</tr>
 						</tbody>
 
@@ -306,23 +300,15 @@
 
 						<thead>
 
-								<th><h4>CONTACTO</h4></th>
+								<th><h4></h4></th>
 
 						</thead>
 
 						<tbody>
 							<tr>
-								<td><h5><i class="fa fa-industry"></i> &copy; 2017 cosilsCompany, Inc.</h5></td>
+								<td></td>
 							</tr>
-							<tr>
-								<td><h5><i class="fa fa-home"></i> Partida Moralet, 137-A - 03699 - Alicante</h5></td>
-							</tr>
-							<tr>
-								<td><h5><i class="fa fa-phone"></i> 0034658214679</h5></td>
-							</tr>
-							<tr>
-								<td><h5><i class="fa fa-envelope"></i> jotamontoyo@hotmail.es</h5></td>
-							</tr>
+
 						</tbody>
 
 
@@ -351,19 +337,21 @@
 	<div class="footer" id="pie">
 
 
-		<h5>&copy; 2017 cosilsCompany, Inc. &middot;
+		<h6>&copy; 2017 cosilsCompany, Inc. &middot;
 
 			<a
 				data-toggle="modal"
-				data-target="#lopd-modal">Política de privacidad &middot;
+				data-target="#lopd-modal">Política de privacidad
 			</a>
+
+			&middot;
 
 			<a
 				data-toggle="modal"
 				data-target="#cookies-modal">Política de cookies
 			</a>
 
-		</h5>
+		</h6>
 
 
 	</div>
