--- a/views/index.ejs
+++ b/views/index.ejs
@@ -279,10 +279,10 @@
 
 						<tbody>
 							<tr>
-								<td><h5>PoolCounter &copy;</h5></td>
+								<td><h5><a data-toggle="modal" data-target="#poolcounter-modal">PoolCounter &copy;</a></h5></td>
 							</tr>
 							<tr>
-								<td><h5>WaterCounter &copy;</h5></td>
+								<td><h5><a data-toggle="modal" data-target="#watercounter-modal">WaterCounter &copy;</a></h5></td>
 							</tr>
 						</tbody>
 
@@ -392,6 +392,101 @@
 						</p>
 						<p>Permite obtener en tiempo inmediato los informes sobre consumos, generando avisos sobre posibles desvíos.</p>
 						<p>Reduce alrededor de un 80% el tiempo empleado en sistemas tradicionales.<p>
+						<p>Desarrollado por:</p>
+						<p class="text-center">&copy; 2017 cosilsCompany, Inc. &middot;
+							<a
+								data-toggle="modal"
+								data-target="#lopd-modal">Política de privacidad &middot;
+							</a>
+							<a
+								data-toggle="modal"
+								data-target="#cookies-modal">Política de cookies
+							</a>
+
+						</p>
+					</div>
+
+<!--					<a id="acceso" href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a> -->
+					<div class="modal-footer">
+						<button type="btn btn-small" class="btn btn-warning btn-xs" data-dismiss="modal">
+							Cerrar
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<!-- MODAL poolcounter ===================================================================================== -->
+		<div class="modal fade" id="poolcounter-modal" tabindex="-1" role="dialog" aria-labelledby="pie_banner" aria-hidden="true" style="padding-left: 0px">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<div class="modal-header text-center">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		                <h2>PoolCounter<span style="font-size: 15px;">&copy;</span></h2>
+
+					</div>
+
+					<div class="modal-body">
+	<!-- 				<img class="img-responsive animated fadeIn" src="/images/marcas/mediterraneo-modal.jpg" alt="">
+						<div class="texto-modelo ocultar">
+							<img src="/images/logos/el-sol-mediterraneo.jpg" style="left: 0px;"></img>
+			        	</div>
+						<br> -->
+						<p>
+
+						</p>
+						<p></p>
+						<p><p>
+						<p>Desarrollado por:</p>
+						<p class="text-center">&copy; 2017 cosilsCompany, Inc. &middot;
+							<a
+								data-toggle="modal"
+								data-target="#lopd-modal">Política de privacidad &middot;
+							</a>
+							<a
+								data-toggle="modal"
+								data-target="#cookies-modal">Política de cookies
+							</a>
+
+						</p>
+					</div>
+
+<!--					<a id="acceso" href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a> -->
+					<div class="modal-footer">
+						<button type="btn btn-small" class="btn btn-warning btn-xs" data-dismiss="modal">
+							Cerrar
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+		<!-- MODAL watercounter ===================================================================================== -->
+		<div class="modal fade" id="watercounter-modal" tabindex="-1" role="dialog" aria-labelledby="pie_banner" aria-hidden="true" style="padding-left: 0px">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<div class="modal-header text-center">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		                <h2>WaterCounter<span style="font-size: 15px;">&copy;</span></h2>
+
+					</div>
+
+					<div class="modal-body">
+	<!-- 				<img class="img-responsive animated fadeIn" src="/images/marcas/mediterraneo-modal.jpg" alt="">
+						<div class="texto-modelo ocultar">
+							<img src="/images/logos/el-sol-mediterraneo.jpg" style="left: 0px;"></img>
+			        	</div>
+						<br> -->
+						<p>
+
+						</p>
+						<p></p>
+						<p><p>
 						<p>Desarrollado por:</p>
 						<p class="text-center">&copy; 2017 cosilsCompany, Inc. &middot;
 							<a
