--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -227,5 +227,19 @@
 
 
 
+    /* ========================================================================== */
+    /*  SILOE                 =================================================== */
+    /* ========================================================================== */
+
+    .item_ensayo {
+
+        text-align: left;
+
+    }
+
+
+
+
+
 
 }
