--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -89,10 +89,14 @@
 
 
     /* ========================================================================== */
-    /*  =================================================== */
+    /*  SILOE                 =================================================== */
     /* ========================================================================== */
 
+    .item_ensayo {
 
+		text-align: left;
+
+	}
 
 
 
