--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -20,6 +20,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label for="capacidad" class="col-md-3 control-label">Capacidad:</label>
+        <div class="col-md-9">
+            <input type="text" class="form-control" id="capacidad" name="vaso[capacidad]" value="<%= vaso.capacidad %>" placeholder="capacidad"/>
+        </div>
+    </div>
+
     <br>
 
     <div class="col-md-6">
