--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -78,7 +78,7 @@
 				<ul class="nav navbar-nav">
 
 					<li><a href="/"><img src="/images/home.png" alt="" /> Inicio <span class="sr-only">(current)</span></a></li>
-					<li><a href="/quizes"><img src="/images/partes3.png" alt="" /> Lectura de Contadores </a></li>
+					<li><a href="/quizes"><img src="/images/partes3.png" alt="" /> Lecturas </a></li>
 					<li><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
 					<li><a href="/quizes/resumen_index"><img src="/images/consumos2.png" alt="" /> Consumos </a></li>
 
