--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -100,6 +100,15 @@
 
 
 
+    .marco_item_ensayo {
+
+		min-height: 175px;
+
+
+    }
+
+
+
 
     /* ========================================================================== */
     /*  =================================================== */
