--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -71,11 +71,11 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo">  <!-- ph -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo">  <!-- ph -->
 
 													<div class="marco_item_ensayo">
 
-														<div class="form-group centrado-v-h">
+														<div class="form-group">
 															<div class="col-md-6 item_ensayo">
 																<label for="ph">Ph m</label>
 															</div>
@@ -103,7 +103,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- redox -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- redox -->
 
 													<div class="marco_item_ensayo">
 
@@ -135,7 +135,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- temperatura -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- temperatura -->
 
 													<div class="marco_item_ensayo">
 
@@ -167,7 +167,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- recirculacion -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- recirculacion -->
 
 													<div class="marco_item_ensayo">
 
@@ -198,7 +198,7 @@
 												</div>
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- transparencia -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- transparencia -->
 
 													<div class="marco_item_ensayo">
 
@@ -206,8 +206,8 @@
 												    		<label for="transparencia" class="col-md-6 control-label">Transp m</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="transparencia_m" name="ensayo[transparencia_m]">
-												    				<option value=true <%if (ensayos[index].transparencia) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].transparencia) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].transparencia_m) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].transparencia_m) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -216,8 +216,8 @@
 												    		<label for="transparencia" class="col-md-6 control-label">Transp t</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="transparencia_t" name="ensayo[transparencia_t]">
-												    				<option value=true <%if (ensayos[index].transparencia) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].transparencia) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].transparencia_t) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].transparencia_t) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -232,7 +232,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- lectura -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- lectura -->
 
 													<div class="marco_item_ensayo">
 
@@ -268,7 +268,7 @@
 											<div class="row"> <!-- 2º bloque de datos -->
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- extranios -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- extranios -->
 
 													<div class="marco_item_ensayo">
 
@@ -276,8 +276,8 @@
 												    		<label for="extranios" class="col-md-6 control-label">Extraños m</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="extranios_m" name="ensayo[extranios_m]">
-												    				<option value=true <%if (ensayos[index].extranios) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].extranios) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].extranios_m) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].extranios_m) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -286,8 +286,8 @@
 												    		<label for="extranios" class="col-md-6 control-label">Extraños t</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="extranios_t" name="ensayo[extranios_t]">
-												    				<option value=true <%if (ensayos[index].extranios) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].extranios) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].extranios_t) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].extranios_t) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -301,7 +301,7 @@
 												</div>
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- turbidez -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- turbidez -->
 
 													<div class="marco_item_ensayo">
 
@@ -332,7 +332,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- isocianuro -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- isocianuro -->
 
 													<div class="marco_item_ensayo">
 
@@ -363,7 +363,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- bromo -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- bromo -->
 
 													<div class="marco_item_ensayo">
 
@@ -394,7 +394,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- cloro -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- cloro -->
 
 													<div class="marco_item_ensayo">
 
@@ -425,7 +425,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- cloro_combinado -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- cloro_combinado -->
 
 													<div class="marco_item_ensayo">
 
@@ -464,7 +464,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- humedad -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- humedad -->
 
 													<div class="marco_item_ensayo">
 
@@ -495,7 +495,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- co2_interior -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- co2_interior -->
 
 													<div class="marco_item_ensayo">
 
@@ -526,7 +526,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- co2_exterior -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- co2_exterior -->
 
 													<div class="marco_item_ensayo">
 
@@ -557,7 +557,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- ecoli -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- ecoli -->
 
 													<div class="marco_item_ensayo">
 
@@ -565,8 +565,8 @@
 												    		<label for="ecoli" class="col-md-6 control-label">Ecoli m</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="ecoli_m" name="ensayo[ecoli_m]">
-												    				<option value=true <%if (ensayos[index].ecoli) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].ecoli) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].ecoli_m) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].ecoli_m) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -575,8 +575,8 @@
 												    		<label for="ecoli" class="col-md-6 control-label">Ecoli t</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="ecoli_t" name="ensayo[ecoli_t]">
-												    				<option value=true <%if (ensayos[index].ecoli) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].ecoli) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].ecoli_t) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].ecoli_t) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -591,7 +591,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- legionella -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- legionella -->
 
 													<div class="marco_item_ensayo">
 
@@ -622,7 +622,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- pseudomona -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- pseudomona -->
 
 													<div class="marco_item_ensayo">
 
@@ -630,8 +630,8 @@
 												    		<label for="pseudomona" class="col-md-6 control-label">Pseudomona m</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="pseudomona_m" name="ensayo[pseudomona_m]">
-												    				<option value=true <%if (ensayos[index].pseudomona) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].pseudomona) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].pseudomona_m) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].pseudomona_m) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -640,8 +640,8 @@
 												    		<label for="pseudomona" class="col-md-6 control-label">Pseudomona t</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="pseudomona_t" name="ensayo[pseudomona_t]">
-												    				<option value=true <%if (ensayos[index].pseudomona) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].pseudomona) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].pseudomona_t) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].pseudomona_t) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -665,7 +665,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- enterococos -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- enterococos -->
 
 													<div class="marco_item_ensayo">
 
@@ -673,8 +673,8 @@
 												    		<label for="enterococos" class="col-md-6 control-label">Enterococos m</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="enterococos_m" name="ensayo[enterococos_m]">
-												    				<option value=true <%if (ensayos[index].enterococos) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].enterococos) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].enterococos_m) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].enterococos_m) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -683,8 +683,8 @@
 												    		<label for="enterococos" class="col-md-6 control-label">Enterococos t</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="enterococos_t" name="ensayo[enterococos_t]">
-												    				<option value=true <%if (ensayos[index].enterococos) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].enterococos) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].enterococos_t) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].enterococos_t) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -699,7 +699,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- staphlylococcus -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- staphlylococcus -->
 
 													<div class="marco_item_ensayo">
 
@@ -707,8 +707,8 @@
 												    		<label for="staphlylococcus" class="col-md-6 control-label">Staphlylococcus m</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="staphlylococcus_m" name="ensayo[staphlylococcus_m]">
-												    				<option value=true <%if (ensayos[index].staphlylococcus) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].staphlylococcus) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].staphlylococcus_m) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].staphlylococcus_m) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -717,8 +717,8 @@
 												    		<label for="staphlylococcus" class="col-md-6 control-label">Staphlylococcus t</label>
 												    		<div class="col-sm-6">
 												    			<select class="form-control" id="staphlylococcus_t" name="ensayo[staphlylococcus_t]">
-												    				<option value=true <%if (ensayos[index].staphlylococcus) {%> selected <%}%>>Ok</option>
-												    				<option value=false <%if (!ensayos[index].staphlylococcus) {%> selected <%}%>>Negativo</option>
+												    				<option value=true <%if (ensayos[index].staphlylococcus_t) {%> selected <%}%>>Ok</option>
+												    				<option value=false <%if (!ensayos[index].staphlylococcus_t) {%> selected <%}%>>Negativo</option>
 												    			</select>
 												    		</div>
 												    	</div>
@@ -733,7 +733,7 @@
 
 
 
-												<div class="col-md-2 grupo_items_ensayo"> <!-- langelier -->
+												<div class="col-md-2 col-sm-4 grupo_items_ensayo"> <!-- langelier -->
 
 													<div class="marco_item_ensayo">
 
