--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -1034,6 +1034,12 @@
 		border:	1px solid #585858;
 		border-radius: 5px;
 		font-size: 12px;
+/*		color: white;
+		background-color: #3d4045;
+		background-color: white; */
+
+
+
 
 	}
 
