--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -239,7 +239,19 @@
 
 
 
+    .ensayo-panel input, .ensayo-panel textarea {
 
 
+		color: white;
+		border-color: rgba(255, 255, 255, 0.05);
+    	background-color: rgba(255, 255, 255, 0.03);
+
+	}
+
+    .marco_item_ensayo {
+
+        color: white;
+		background-color: #3d4045;
+    }
 
 }
