--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -57,7 +57,7 @@
 						<% if (quizes[i].proceso) {%>
 							<td class="text-center"><span class="" aria-hidden="true"></span></td>
 						<%} else {%>
-							<td class="text-center"><img src="/images/check.png" /></td>
+							<td class="text-center"><i class="fa fa-check"></i></td>
 						<%}%>
 <!--						<td><%= quizes[i].proveedor %></td>
 						<td><%= quizes[i].pregunta %></td> -->
