--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -7,14 +7,21 @@
 		<div class="form-group">
 			<label for="preg" class="col-sm-3 control-label">Usuario:</label>
 			<div class="col-sm-9">
-				<input type="text" class="form-control" id="username" name="user[username]" value="<%= user.username %>"/>
+				<input type="text" class="form-control" id="username" name="user[username]" value="<%= user.username %>" required />
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label for="resp" class="col-sm-3 control-label">Clave:</label>
 			<div class="col-sm-9">
-				<input type="password" class="form-control" id="pass" name="user[password]"/>
+				<input type="password" class="form-control" id="pass" name="user[password]" required />
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="email" class="col-sm-3 control-label">eMail:</label>
+			<div class="col-sm-9">
+				<input type="email" class="form-control" id="email" name="user[email]" value="<%= user.email %>" required />
 			</div>
 		</div>
 
