--- a/views/criterios/new.ejs
+++ b/views/criterios/new.ejs
@@ -10,21 +10,21 @@
                 <div class="form-group">
                     <label for="mes" class="col-md-5 control-label">Mes:</label>
                     <div class="col-md-7">
-                        <input type="text" class="form-control" id="mes" name="criterio[mes]"/>
+                        <input type="number" min="1" max="12" class="form-control" id="mes" name="criterio[mes]"/>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="mes" class="col-md-5 control-label">Límite máximo:</label>
                     <div class="col-md-7">
-                        <input type="text" class="form-control" id="max" name="criterio[max]" step="0.01"/>
+                        <input type="number" min="0" class="form-control" id="max" name="criterio[max]" step="0.1"/>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="mes" class="col-md-5 control-label">Límite mínimo:</label>
                     <div class="col-md-7">
-                        <input type="text" class="form-control" id="min" name="criterio[min]" step="0.01"/>
+                        <input type="number" min="0" class="form-control" id="min" name="criterio[min]" step="0.1"/>
                     </div>
                 </div>
 
