--- a/views/siloes/_form.ejs
+++ b/views/siloes/_form.ejs
@@ -8,21 +8,21 @@
 	<div class="form-group">
 		<label for="preg" class="col-sm-2 control-label">Día:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="dia" name="siloe[dia]" value="<%= siloe.dia %>" placeholder="mes"/>
+			<input type="number" min="1" max="31" class="form-control" id="dia" name="siloe[dia]" value="<%= siloe.dia %>" placeholder="mes"/>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label for="preg" class="col-sm-2 control-label">Mes:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="mes" name="siloe[mes]" value="<%= siloe.mes %>" placeholder="mes"/>
+			<input type="number" min="1" max="12" class="form-control" id="mes" name="siloe[mes]" value="<%= siloe.mes %>" placeholder="mes"/>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label for="preg" class="col-sm-2 control-label">Año:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="anio" name="siloe[anio]" value="<%= siloe.anio %>" placeholder="fecha"/>
+			<input type="number" min="2016" max="2030" class="form-control" id="anio" name="siloe[anio]" value="<%= siloe.anio %>" placeholder="fecha"/>
 		</div>
 	</div>
 
